--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="preencha_nome">Insira o nome</string>
     <string name="preencha_data_nascimento">Insira a Data de nascimento</string>
 
+    <string name="guardar">Guardar</string>
+    <string name="cancelar">Cancelar</string>
+
 </resources>
