Correção de erros

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="erro_apagar_utente">Erro ao apagar utente</string>
     <string name="erro_alterar_utente">Erro ao alterar utente</string>
     <string name="utente_guardado_sucesso">Utente guardado com sucesso</string>
+    <string name="erro_inserir_utente">Erro ao inserir utente</string>
 
     <string name="guardar">Guardar</string>
     <string name="cancelar">Cancelar</string>
