--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="eliminar_utente">Eliminar o Utente</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="utente_eliminado_sucesso">Utente eliminado com sucesso</string>
 
     <string name="nome">Nome</string>
     <string name="data_nascimento">Data de Nascimento</string>
