--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="guardar">Guardar</string>
     <string name="cancelar">Cancelar</string>
 
+    <string name="menu_principal">Menu Principal</string>
+    <string name="alterar_quantidade">Alterar a quantidade das vacinas</string>
+    <string name="editar_vacina">Editar Vacina</string>
+    <string name="nova_vacina">Nova Vacina</string>
+
 </resources>
