--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
 
     <string name="erro_inserir_vacina">Erro na inserção</string>
     <string name="vacina_guardada_sucesso">Erro a guardar</string>
+    <string name="erro_editar_vacina">Erro ao editar vacina</string>
 
 </resources>
