--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,8 +52,7 @@
     <string name="profissional_de_sa_de">Profissional de Saúde</string>
     <string name="utente">Utente</string>
     <string name="novo_cargo">Novo cargo</string>
-    <string name="textview">TextView</string>
-    <string name="textview">TextView</string>
-    <string name="textview">TextView</string>
+    <string name="novo_profissional_saude">novo_profissional_saude</string>
+    <string name="editar_profissional_saude">editar_profissional_saude</string>
 
 </resources>
